# media-playlist

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
cmake/common/: buildspec_common.cmake
include/: file-data.h  playlist-source.h  utils.h
include/classes/: custom_properties.hpp
include/qt-classes/: custom-properties.hpp  media-vault-queue-widget.hpp  media-widget.hpp  multi-media-vault-queue-viewer.hpp  multi-playlist-queue-viewer.hpp  playlist-media-widget.hpp  playlist-queue-viewer.hpp  playlist-queue-widget.hpp  playlist-widget.hpp
include/qt_classes/: custom_properties.hpp
include/source-types/: playlist-source-types.hpp
include/sources/: media-vault-source.hpp  playlist-source.h  playlist-source.hpp  queue_manager.hpp
include/types/: media-file-data-types.hpp  media-vault-source-types.hpp  playlist-source-types.hpp
include/utils/: enum-utils.h  enum-utils.hpp  media-file-array-utils.hpp  utils.h  utils.hpp
src/: not_real_c.txt  playlist-source.c  playlist.c  playlist.h  playlist_source.c  playlist_source.h  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h  utils.c
src/classes/: custom_properties.cpp  queue_manager.cpp
src/qt-classes/: custom-properties.cpp  media-vault-queue-widget.cpp  media-widget.cpp  multi-media-vault-queue-viewer.cpp  multi-playlist-queue-viewer.cpp  playlist-media-widget.cpp  playlist-queue-viewer.cpp  playlist-queue-widget.cpp  playlist-widget.cpp
src/qt_classes/: custom_properties.cpp
src/sources/: media-vault-source.cpp  playlist-source.c  playlist-source.cpp  queue_manager.cpp
src/utils/: enum-utils.c  enum-utils.cpp  media-file-array-utils.cpp  utils.c  utils.cpp
